update Audited files